--- a/packages/dbServer/package.json
+++ b/packages/dbServer/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@apollo/federation": "^0.20.4",
+    "apollo-server-express": "^2.18.2",
     "express": "^4.17.1",
     "jest-extended": "^0.11.2"
   },
