Add mongoose & sample-mflix db connection

--- a/packages/dbServer/.babelrc
+++ b/packages/dbServer/.babelrc
@@ -4,8 +4,7 @@
       "@babel/preset-env",
       {
         "targets": {
-          "browsers": ["last 2 versions", "safari >= 7"],
-          "node": "10.16.3"
+          "esmodules": true
         }
       }
     ],
