--- a/packages/dbServer/package.json
+++ b/packages/dbServer/package.json
@@ -16,7 +16,8 @@
     "@apollo/federation": "^0.20.4",
     "apollo-server-express": "^2.18.2",
     "express": "^4.17.1",
-    "jest-extended": "^0.11.2"
+    "jest-extended": "^0.11.2",
+    "mongoose": "^5.10.9"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.2",
@@ -31,6 +32,7 @@
     "@babel/runtime": "^7.6.2",
     "@types/express": "^4.17.8",
     "@types/jest": "^24.0.18",
+    "@types/mongoose": "^5.7.36",
     "@types/node": "^14.11.10",
     "@typescript-eslint/eslint-plugin": "^2.3.1",
     "@typescript-eslint/parser": "^2.3.1",
