--- a/packages/dbServer/package.json
+++ b/packages/dbServer/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint \"src/**/*.{js,ts}\"",
     "lint:types": "tsc --noEmit --pretty",
     "start:watch": "nodemon src/index.js -e ts",
-    "test": "jest"
+    "test": "jest",
+    "gql:gen": "graphql-codegen --config codegen.yml"
   },
   "author": "",
   "license": "MIT",
@@ -31,6 +32,8 @@
     "@babel/preset-typescript": "^7.6.0",
     "@babel/register": "^7.6.2",
     "@babel/runtime": "^7.6.2",
+    "@graphql-codegen/cli": "1.17.10",
+    "@graphql-codegen/typescript": "1.17.10",
     "@types/express": "^4.17.8",
     "@types/jest": "^24.0.18",
     "@types/mongoose": "^5.7.36",
@@ -48,7 +51,8 @@
     "jest-watch-typeahead": "^0.4.0",
     "nodemon": "^1.19.2",
     "rimraf": "^3.0.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.3",
+    "@graphql-codegen/typescript-resolvers": "1.17.10"
   },
   "jest": {
     "verbose": false,
