--- a/packages/dbServer/package.json
+++ b/packages/dbServer/package.json
@@ -18,6 +18,7 @@
     "apollo-server": "^2.18.2",
     "apollo-server-express": "^2.18.2",
     "express": "^4.17.1",
+    "graphql-scalars": "^1.4.0",
     "jest-extended": "^0.11.2",
     "mongoose": "^5.10.9"
   },
@@ -34,6 +35,7 @@
     "@babel/runtime": "^7.6.2",
     "@graphql-codegen/cli": "1.17.10",
     "@graphql-codegen/typescript": "1.17.10",
+    "@graphql-codegen/typescript-resolvers": "1.17.10",
     "@types/express": "^4.17.8",
     "@types/jest": "^24.0.18",
     "@types/mongoose": "^5.7.36",
@@ -51,8 +53,7 @@
     "jest-watch-typeahead": "^0.4.0",
     "nodemon": "^1.19.2",
     "rimraf": "^3.0.0",
-    "typescript": "^3.6.3",
-    "@graphql-codegen/typescript-resolvers": "1.17.10"
+    "typescript": "^3.6.3"
   },
   "jest": {
     "verbose": false,
