--- a/packages/dbServer/package.json
+++ b/packages/dbServer/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "graphql-scalars": "^1.4.0",
     "jest-extended": "^0.11.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
     "mongoose-lean-id": "^0.2.0"
   },
