add category & product

--- a/packages/dbServer/package.json
+++ b/packages/dbServer/package.json
@@ -17,10 +17,12 @@
     "@apollo/federation": "^0.20.4",
     "apollo-server": "^2.18.2",
     "apollo-server-express": "^2.18.2",
+    "dataloader": "^2.0.0",
     "express": "^4.17.1",
     "graphql-scalars": "^1.4.0",
     "jest-extended": "^0.11.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "mongoose": "^5.10.9",
     "mongoose-lean-id": "^0.2.0"
   },
