--- a/packages/dbServer/tsconfig.json
+++ b/packages/dbServer/tsconfig.json
@@ -14,7 +14,7 @@
     "esModuleInterop": true,
 
     // Enable strictest settings like strictNullChecks & noImplicitAny.
-    "strict": true,
+    "strict": false,
     // "noImplicitAny": true,                 /* Raise error on expressions and declarations with an implied 'any' type. */
     // "strictNullChecks": true,              /* Enable strict null checks. */
     // "strictFunctionTypes": true,           /* Enable strict checking of function types. */
