--- a/packages/dbServer/.vscode/settings.json
+++ b/packages/dbServer/.vscode/settings.json
@@ -19,5 +19,14 @@
   },
 
   // ESLint Typescript
-  "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"]
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact"
+  ],
+  "cSpell.words": [
+    "bson",
+    "ejson"
+  ]
 }
