--- a/packages/dbServer/package.json
+++ b/packages/dbServer/package.json
@@ -20,6 +20,7 @@
     "base64-url": "^2.3.3",
     "dataloader": "^2.0.0",
     "express": "^4.17.1",
+    "graphql-directive-auth": "^0.3.2",
     "graphql-scalars": "^1.4.0",
     "jest-extended": "^0.11.2",
     "jsonwebtoken": "^8.5.1",
