--- a/packages/dbServer/package.json
+++ b/packages/dbServer/package.json
@@ -19,7 +19,9 @@
     "apollo-server-express": "^2.18.2",
     "base64-url": "^2.3.3",
     "dataloader": "^2.0.0",
+    "date-fns": "^2.17.0",
     "express": "^4.17.1",
+    "graphql-depth-limit": "^1.1.0",
     "graphql-directive-auth": "^0.3.2",
     "graphql-scalars": "^1.4.0",
     "jest-extended": "^0.11.2",
